--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -8,17 +8,8 @@ const hasNotificationBar = false // Set this to false when NotificationBar is re
 
 const links = [
   {
-    text: "All Speakers",
-    subLinks: [
-      {
-        text: "Keynote & Track Speakers",
-        link: "/speakers",
-      },
-      {
-        text: "Workshop & Co-located Events Speakers",
-        link: "/workshops",
-      },
-    ],
+    text: "Speakers",
+    link: "/speakers",
   },
   {
     text: "Tracks",
