--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -8,17 +8,8 @@ const hasNotificationBar = false; // Set this to false when NotificationBar is r
 
 const links = [
   {
-    text: "所有讲师",
-    subLinks: [
-      {
-        text: "全体 Keynote & 主题讲师",
-        link: "/zh/speakers",
-      },
-      {
-        text: "工作坊 & 同期活动讲师",
-        link: "/zh/workshops",
-      },
-    ],
+    text: "讲师",
+    link: "/zh/speakers",
   },
   {
     text: "主题",
