added speakers culture day tour page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,6 +42,10 @@ const links = [
         text: "Seeed Embodied AI Hackathon",
         link: "https://lu.ma/7djaix39",
       },
+      {
+        text: "Speakers Culture Tour",
+        link: "/speakers-culture-tour/",
+      },
     ],
   },
   {
