--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -55,6 +55,11 @@ const links = [
         link: "https://hackathon.mofa.ai",
         openInNewTab: false,
       },
+      {
+        text: "Speakers Cultural Day Tour",
+        link: "/speakers-culture-tour/",
+        openInNewTab: false,
+      },
     ],
   },
   {
