--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -55,12 +55,11 @@ const links = [
         link: "https://hackathon.mofa.ai",
         openInNewTab: false,
       },
-
-      // {
-      //   text: "AIOS 黑客松大赛",
-      //   link: "https://mofa.ai/super-agent-hackathon/",
-      //   openInNewTab: true,
-      // },
+      {
+        text: "讲师嘉宾文化一日游",
+        link: "/zh/speakers-culture-tour/",
+        openInNewTab: false,
+      },
     ],
   },
   {
